non-msrv-tests/tests/ui/duplicate_default.stderr
error: multiple `default` options in enum
 --> tests/ui/duplicate_default.rs:6:20
  |
6 |     #[derive_where(default)]
  |                    ^^^^^^^
